--- a/erpnext/public/js/templates/contact_list.html
+++ b/erpnext/public/js/templates/contact_list.html
@@ -16,10 +16,13 @@
     <div style="padding-left: 15px;">
         <p style="padding-top: 5px; font-size: 12px;">
         {% if(contact_list[i].phone) { %}
-            {%= __("Phone") %}: {%= contact_list[i].phone %}<br>
+            {%= __("Phone") %}: {%= contact_list[i].phone %} <a class="outgoing-call" href={%= "vdsip:"+contact_list[i].phone %} contact-name= {%= JSON.stringify(contact_list[i].name) %} phone-number = {%= contact_list[i].phone %}><i class="icon-phone" aria-hidden="true"></i> Call</a><br>
         {% } %}
         {% if(contact_list[i].mobile_no) { %}
-            {%= __("Mobile No.") %}: {%= contact_list[i].mobile_no %}<br>
+            {%= __("Mobile No") %}: {%= contact_list[i].mobile_no %} <a class="outgoing-call" href={%= "vdsip:"+contact_list[i].mobile_no %} contact-name= {%= JSON.stringify(contact_list[i].name) %} phone-number = {%= contact_list[i].mobile_no %}><i class="icon-phone" aria-hidden="true"></i> Call</a><br>
+        {% } %}
+        {% if(contact_list[i].mobile_no2) { %}
+            {%= __("Mobile No Privat") %}: {%= contact_list[i].mobile_no2 %} <a class="outgoing-call" href={%= "vdsip:"+contact_list[i].mobile_no2 %} contact-name= {%= JSON.stringify(contact_list[i].name) %} phone-number = {%= contact_list[i].mobile_no2 %}><i class="icon-phone" aria-hidden="true"></i> Call</a><br>
         {% } %}
         {% if(contact_list[i].email_id) { %}
             {%= __("Email ID") %}: {%= contact_list[i].email_id %}
